--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 MTA: Paradise
   mabako <mabako@gmail.com>
+  Nicolas <nick62olas@free.fr>
   sun <sun@optical-gaming.com>
   Calvin Wong Loi Sing <jumba990@gmail.com>
   Maccer / Fedor Sinev <fedorsinev@gmail.com>
